[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EnemyAI/Enemy_1.gd" type="Script" id=1]
[ext_resource path="res://Art/Charcters/Enemies/vorticella02.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
uniform float amt:hint_range(0.0,1.0);
void fragment() {
	
	COLOR = vec4(1.0,0.0,0.0,0.25);
	
	if (distance(UV,vec2(0.5,0.4)) > amt/3.0){
		COLOR = vec4(0.0);
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/amt = 0.648

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Base/KinematicBody2D/Viewport")

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0

[node name="Vorticella" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="Node2D" parent="."]
rotation = -1.5708

[node name="KinematicBody2D" type="KinematicBody2D" parent="Base" groups=[
"Enemies",
"Hazard",
]]
rotation = 1.5708
collision_layer = 16
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/KinematicBody2D"]
position = Vector2( 0, -105.43 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Base/KinematicBody2D/CollisionShape2D"]
material = SubResource( 5 )
z_index = 1
texture = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="Base/KinematicBody2D"]
size = Vector2( 500, 500 )
transparent_bg = true
render_target_v_flip = true

[node name="vorticella02" parent="Base/KinematicBody2D/Viewport" instance=ExtResource( 2 )]

[node name="Texture" type="Sprite" parent="Base/KinematicBody2D"]
position = Vector2( -16.0543, -74.4377 )
scale = Vector2( 0.446125, 0.446125 )
texture = SubResource( 2 )

[node name="Vision Area" type="Area2D" parent="Base"]
position = Vector2( 19.478, 7.05102e-05 )
rotation = 1.5708
collision_layer = 0
collision_mask = 44

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base/Vision Area"]
position = Vector2( 0, -20 )
polygon = PoolVector2Array( 0, 0, 80, -250, -80, -250 )

[node name="CollisionArea" type="Area2D" parent="Base"]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/CollisionArea"]
visible = false
position = Vector2( 106.417, 0.000312805 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="RayCastParent" type="Node2D" parent="."]
rotation = -1.5708

[node name="RayCast2D" type="RayCast2D" parent="RayCastParent"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 450 )
collision_mask = 34

[node name="StunedTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="Base/Vision Area" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Base/Vision Area" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Base/CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="timeout" from="StunedTimer" to="." method="_on_StunedTimer_timeout"]
